<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context="afinal.com.proyectoandroid.MainActivity">

    <TextView
        android:id="@+id/textMessage"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        tools:textColor="@android:color/holo_red_dark" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">


    <TextView
        android:id="@+id/textView"
        android:layout_width="269dp"
        android:layout_height="69dp"
        android:layout_gravity="left"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold" />
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/icons8_dog_paw" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:lineSpacingExtra="10sp"
        android:text="@string/user"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
      />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/password"
        android:textSize="18sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:onClick="login"
        android:text="@string/login" />
    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="register"
        android:text="@string/userRegister" />
</LinearLayout>
