<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context="afinal.com.proyectoandroid.Registration">
    <TextView
        android:id="@+id/textMessageReg"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        tools:textColor="@android:color/holo_red_dark" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textViewReg"
            android:layout_width="277dp"
            android:layout_height="69dp"
            android:layout_gravity="left"
            android:text="@string/userRegister"
            android:textAlignment="viewEnd"
            android:textSize="30sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/imageViewReg"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/icons8_dog_paw" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:text="@string/user"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtUserReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
     />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="@string/password"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtPasswordReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/button3"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:onClick="save"
        android:text="@string/register" />

</LinearLayout>
